--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:windows": "set NODE_ENV=production && node server/index.js"
   },
   "dependencies": {
+    "@upstash/redis": "^1.36.2",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "express": "^4.18.2",
