adding additional assets to monitor, basic auth, Redis config variables for caching

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,11 @@ NVD_API_KEY=your-nvd-api-key-here
 # Admin API key for manual refresh endpoint (set a secure random string)
 ADMIN_API_KEY=your-secure-admin-key
 
+# Frontend: Tell the frontend to use the backend API (auto-detected in production builds)
+VITE_USE_BACKEND=true
+
+# JWT Secret for authentication (set a secure random string)
+JWT_SECRET=your-jwt-secret-here
+
 # Environment
 NODE_ENV=production
