--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.36.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.314.0",
     "node-cron": "^3.0.3",
     "react": "^18.2.0",
